--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/java/org/kie/workbench/common/stunner/client/widgets/palette/categories/items/DefinitionPaletteItemWidgetViewImpl.css
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/java/org/kie/workbench/common/stunner/client/widgets/palette/categories/items/DefinitionPaletteItemWidgetViewImpl.css
@@ -1,8 +1,18 @@
-.bs3-icon-spacer {
+.kie-palette-item-list-item {
+    height:24px; /* IE11 */
+}
+
+.kie-palette-item-anchor-spacer {
+    display:inline-block !important; /* IE11 */
+}
+
+.kie-palette-item-icon-spacer {
+    vertical-align: super; /* IE11 */
+    display: inline-block; /*IE11*/
     padding-right: 1em;
     margin: auto;
 }
 
-.kie-palette-item-icon-spacer {
-    display: inline;
+.kie-palette-item-value-spacer {
+    display: inline-block !important;
 }
